[FIX] social_marketing: make the "Add a stream" modal responsive
Currently, in social_marketing, when we try to add a stream on small devices,
the social platform cards are shown in single line and get out of the screen.

This commit fixes the issue by 'wrapping' the cards in next line if there is
not enough space. Also, as a side improvement, the width is now fixed at 90px,
so that when wrapped, the cards look aligned properly (having same width).
Also, Change the 'o_social_media_cards' class property to adapt the tour
according to the changes (to display the bubble in the proper position).

task-2893410

closes odoo/enterprise#31568

X-original-commit: d38cba20c160e3c8d0c68b70ad59b0ddf3647f3b

--- a/social/static/src/scss/social.scss
+++ b/social/static/src/scss/social.scss
@@ -303,7 +303,7 @@ $o-social-font-family-reset: $o-font-family-sans-serif;
 .o_social_add_stream_form {
     margin: $modal-inner-padding * -1;
     padding: ($spacer * 1.5);
-    padding-bottom: ($spacer * 5);
+    padding-bottom: ($spacer * 4);
 
     .o_social_media {
         background-color: $list-group-bg;
@@ -509,5 +509,5 @@ $o-social-font-family-reset: $o-font-family-sans-serif;
 }
 
 .o_social_media_cards {
-    width: min-content;
+    width: fit-content;
 }
